Set min-width for edition column to prevent text wrap

--- a/client/stylesheets/readme-db.css
+++ b/client/stylesheets/readme-db.css
@@ -4,6 +4,9 @@ html {
 th {
     cursor: pointer
 }
+#th-edition {
+    min-width: 70px;
+}
 #top {
     margin-top: 40px;
     margin-bottom: 40px;
